[gd_scene load_steps=3 format=3 uid="uid://dxy5d7x4dxftk"]

[ext_resource type="Script" path="res://ChatUI.gd" id="1"]
[ext_resource type="Theme" uid="uid://ct5b2qjmrom7t" path="res://editor_theme.tres" id="2"]

[node name="ChatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(1, 0.792157, 0.756863, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="Left" type="VBoxContainer" parent="HBoxContainer"]
offset_right = 359.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.46

[node name="ItemList" type="ItemList" parent="HBoxContainer/Left"]
offset_right = 359.0
offset_bottom = 576.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
allow_reselect = true

[node name="newChat" type="Button" parent="HBoxContainer/Left"]
offset_top = 580.0
offset_right = 359.0
offset_bottom = 612.0
text = "New chat"

[node name="joinChat" type="Button" parent="HBoxContainer/Left"]
offset_top = 616.0
offset_right = 359.0
offset_bottom = 648.0
text = "Join chat"

[node name="Right" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 369.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Right"]
offset_right = 783.0
offset_bottom = 32.0

[node name="Button" type="Button" parent="HBoxContainer/Right/HBoxContainer"]
visible = false
offset_right = 29.0
offset_bottom = 32.0
auto_translate = false
text = " < "

[node name="Label" type="Label" parent="HBoxContainer/Right/HBoxContainer"]
offset_right = 753.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_alignment = 1

[node name="MenuButton" type="MenuButton" parent="HBoxContainer/Right/HBoxContainer"]
offset_left = 757.0
offset_right = 783.0
offset_bottom = 32.0
auto_translate = false
text = "..."
item_count = 3
popup/item_0/text = "Quit chat"
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/id = 2
popup/item_1/separator = true
popup/item_2/text = "Chat id: {0}"
popup/item_2/id = 1
popup/item_2/disabled = true

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/Right"]
offset_top = 36.0
offset_right = 783.0
offset_bottom = 594.0
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/Right"]
custom_minimum_size = Vector2i(0, 50)
offset_top = 598.0
offset_right = 783.0
offset_bottom = 648.0

[node name="JoinChatDialog" type="Popup" parent="."]
size = Vector2i(200, 100)
extend_to_title = true
min_size = Vector2i(200, 50)

[node name="LineEdit" type="LineEdit" parent="JoinChatDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Chat id"
expand_to_text_length = true
flat = true
caret_blink = true
caret_blink_interval = 0.5

[node name="CreateChatDialog" type="Popup" parent="."]
disable_3d = true
size = Vector2i(200, 100)
exclusive = true
extend_to_title = true
min_size = Vector2i(200, 50)

[node name="LineEdit" type="LineEdit" parent="CreateChatDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Chat name"
caret_blink = true
caret_blink_interval = 0.5

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Sure to quit chat?"

[connection signal="resized" from="." to="." method="on_resize"]
[connection signal="item_selected" from="HBoxContainer/Left/ItemList" to="." method="change_chat"]
[connection signal="button_down" from="HBoxContainer/Left/newChat" to="." method="create_chat_ui"]
[connection signal="button_down" from="HBoxContainer/Left/joinChat" to="." method="join_chat_ui"]
[connection signal="button_down" from="HBoxContainer/Right/HBoxContainer/Button" to="." method="show_chatlist"]
[connection signal="text_submitted" from="HBoxContainer/Right/LineEdit" to="." method="send_message"]
